--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 	&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
 
-	<a href="Second-page.html">Page 2</a> 
+	<a href="secondpage.html">Page 2</a> 
 	
 	</div>
 
