--- a/secondpage.html
+++ b/secondpage.html
@@ -33,7 +33,7 @@
 	<table>
 		<tr>
 			<td>
-				<img src="phone.png" width="700" height="600" />
+				<img src="Phone.png" width="700" height="600" />
 </td>
 <td>
 	<p> Designers have to take gestures into account especially when designing a product which involves interaction with people. If a User Interface designer is designing an app for the iPhone, they must consider the users finger placements and gestures, so they know the app will be ergonomic and easy to use. They must investigate and research this to find trends and common universal gestures. An example of where this has been implemented is on Apples Macbook Pro. The trackpad on this computer allows for many gestures that accomplish different tasks, including: 3 fingers swiping forward allows the user to see all their desktops open at once.  Designers not only have to consider hand gestures they also must a very good use of them when orally and physically presenting ideas to clients. Research shows that the areas of our brain for hand communication and oral communication are approximately in the same region which is why hand gestures are so important in presenting.
