--- a/secondpage.html
+++ b/secondpage.html
@@ -42,7 +42,7 @@
 </td>
 </tr>
 </table>
-<h2>
+<!-- <h2>
 Some examples of gestures designers have to consider: 
 </h2>
 <table>
@@ -64,7 +64,7 @@ Some examples of gestures designers have to consider:
 <br>
 <br>
 <br>
-</div>
+</div> -->
 
 <div class="block4">
 	<h1> EXAMPLE OF USE IN THE DESIGN INDUSTRY <h1>
